manifests/redis-slave-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-slave
  name: redis-slave
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-slave
  template:
    metadata:
      labels:
        app: redis-slave
    spec:
      containers:
      - image: redis
        name: redis-slave
        command:
        - 'bash'
        - '-c'
        - 'redis-server --slaveof $REDIS_MASTER_HOST 6379'
        ports:
        - containerPort: 6379
