manifests/web-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-server
  name: web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      - image: quay.io/myafk/interactive:stable
        command: ["interactive", "ingress"]
        name: web-server
        ports:
        - containerPort: 8085
