manifests/redis-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-master
  name: redis-master
spec:
  ports:
  - name: "6379"
    port: 6379
    targetPort: 6379
  selector:
    app: redis-master
