manifests/redis-slave-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-slave
  name: redis-slave
spec:
  ports:
  - name: "6379"
    port: 6379
    targetPort: 6379
  selector:
    app: redis-slave
