manifests/web-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-server
  name: web-server
spec:
  ports:
  - name: "8085"
    port: 8085
    targetPort: 8085
  selector:
    app: web-server
